# Modbus-Tools

./: .clang-tidy  .gitignore  CMakeLists.txt  DISCLAIMER.md  LICENSE  README.md  README_zh-CN.md  README_zh-TW.md  README_zh_CN.md  README_zh_TW.md
app/: CMakeLists.txt  app.aps  app.rc  main.cpp
core/: AppConstants.h  CMakeLists.txt  Config.h  ReconnectPolicy.cpp  ReconnectPolicy.h
core/analyzer/: AnalyzerCommon.h  AnalyzerExporter.cpp  AnalyzerExporter.h  ValueFormatter.cpp  ValueFormatter.h
core/common/: ISettingsService.h  SettingsController.cpp  SettingsController.h  SettingsKeys.h
core/io/: ChannelBase.cpp  ChannelBase.h  ChannelOperationWorker.cpp  ChannelOperationWorker.h  GenericIoWorker.cpp  GenericIoWorker.h  IChannel.h  SerialChannel.cpp  SerialChannel.h  SerialConfig.h  ServerChannelWorker.cpp  ServerChannelWorker.h  TcpChannel.cpp  TcpChannel.h  TcpServerHandle.h  UdpChannel.cpp  UdpChannel.h
core/logging/: Logger.cpp  Logger.h
core/modbus/base/: ModbusConfig.h  ModbusCrc.h  ModbusDataHelper.cpp  ModbusDataHelper.h  ModbusEndianCodec.h  ModbusFrame.h  ModbusLrc.cpp  ModbusLrc.h  ModbusPduBuilder.cpp  ModbusPduBuilder.h  ModbusProtocolChecks.cpp  ModbusProtocolChecks.h  ModbusTypes.h
core/modbus/dispatch/: CommandQueue.h  ModbusCommand.h  ModbusWorker.cpp  ModbusWorker.h
core/modbus/factory/: IModbusFactory.h  ModbusFactory.cpp  ModbusFactory.h
core/modbus/parser/: FrameParseWorker.cpp  FrameParseWorker.h  ModbusFrameParser.cpp  ModbusFrameParser.h
core/modbus/request/: ModbusRequestFactory.cpp  ModbusRequestFactory.h
core/modbus/session/: BackoffCalculator.cpp  BackoffCalculator.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionStateMachine.cpp  ConnectionStateMachine.h  ExceptionInterpreter.cpp  ExceptionInterpreter.h  FlowController.cpp  FlowController.h  FrameExtractor.cpp  (+16 more)
core/polling/: PollingStrategy.cpp  PollingStrategy.h
core/result/: Result.h
core/update/: PlatformReleaseAssetStrategy.cpp  PlatformReleaseAssetStrategy.h  PlatformUpdateInstallStrategy.cpp  PlatformUpdateInstallStrategy.h  ReleaseParser.cpp  ReleaseParser.h  UpdateManager.cpp  UpdateManager.h
infra/: CMakeLists.txt
infra/io/: BufferedWritingChannel.cpp  BufferedWritingChannel.h  ChannelBase.cpp  ChannelBase.h  ChannelOperationWorker.cpp  ChannelOperationWorker.h  IChannel.h  ReconnectPolicy.h  SerialChannel.cpp  SerialChannel.h  SerialConfig.cpp  SerialConfig.h  TcpChannel.cpp  TcpChannel.h  TcpServerHandle.cpp  UdpChannel.cpp  UdpChannel.h
infra/logging/: Logger.cpp  Logger.h  LoggingStrategy.h
infra/platform/: CMakeLists.txt  IPlatformPaths.h  IPlatformProcessRunner.h  PathResolver.cpp  PathResolver.h  PlatformEncoding.h  PlatformInfo.h  PlatformProcessRunnerFactory.h  QtStandardPlatformPaths.cpp  QtStandardPlatformPaths.h  UnsupportedProcessRunner.cpp  UnsupportedProcessRunner.h
src/: CMakeLists.txt  pch.h
src/App/: main.cpp
src/Core/: CoreWorker.cpp  CoreWorker.h
src/HAL/: IChannel.h  SerialChannel.cpp  SerialChannel.h  TcpChannel.cpp  TcpChannel.h
src/UI/: MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt  ModbusProtocolTest.cpp  SessionTest.cpp  TestMain.cpp  TestMainCore.cpp  TestMainWidgets.cpp
tests/helpers/: ModbusTestHelpers.h
tests/mocks/: MockChannel.h  MockTransport.h  MockUpdateCoordinator.h  UiTestDoubles.h
tests/unit/: NoexceptContractTest.cpp  PathResolverTest.cpp
ui/: AnalyzerLinkageController.cpp  AnalyzerLinkageController.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  UpdateInteractionView.cpp  UpdateInteractionView.h  assets.qrc
ui/application/: AnalyzerLinkCoordinator.cpp  AnalyzerLinkCoordinator.h  AppLifecycleCoordinator.cpp  AppLifecycleCoordinator.h  IMainWindowPresenter.h  IMainWindowView.h  LanguageCoordinator.cpp  LanguageCoordinator.h  MainWindowPresenter.cpp  MainWindowPresenter.h  UpdateCoordinator.cpp  UpdateCoordinator.h
ui/common/: AppConfig.cpp  AppConfig.h  CompactMenuBarStyle.cpp  CompactMenuBarStyle.h  ConnectionAlert.h  IAppConfig.h  ISettingsService.h  QtThemeRuntime.cpp  QtThemeRuntime.h  SettingsKeys.h  SettingsService.cpp  SettingsService.h  TcpConnectionStateCoordinator.h  TcpStateTransition.h  Theme.cpp  Theme.h  ThemeController.cpp  ThemeController.h  ThemeRuntime.h  ThemeUi.cpp  ThemeUi.h  ThemeUiHelpers.cpp  ThemeUiHelpers.h  ThemeVisuals.cpp  ThemeVisuals.h  TrafficEvent.h  UpdateChecker.cpp  UpdateChecker.h  updatechecker.cpp  updatechecker.h
ui/i18n/: Modbus-Tools_zh_CN.qm  Modbus-Tools_zh_CN.ts  Modbus-Tools_zh_TW.qm  Modbus-Tools_zh_TW.ts  ModbusTools_zh_CN.qm  ModbusTools_zh_CN.ts  ModbusTools_zh_TW.qm  ModbusTools_zh_TW.ts  i18n.qrc
ui/logging/: LogBridge.cpp  LogBridge.h
ui/shell/: MainWindowPageBuilder.cpp  MainWindowPageBuilder.h  NavigationController.cpp  NavigationController.h
ui/views/: BaseModbusPage.cpp  BaseModbusPage.h  GenericChannelViewBase.cpp  GenericChannelViewBase.h
ui/widgets/: AboutDialog.cpp  AboutDialog.h  BaseConnectionWidget.cpp  BaseConnectionWidget.h  ByteMonitorWidget.cpp  ByteMonitorWidget.h  CollapsibleSection.cpp  CollapsibleSection.h  ControlWidget.cpp  ControlWidget.h  DisclaimerDialog.cpp  DisclaimerDialog.h  FrameAnalyzerWidget.cpp  FrameAnalyzerWidget.h  FunctionWidget.cpp  FunctionWidget.h  GenericInputWidget.cpp  GenericInputWidget.h  IConnectionWidget.h  LogListModel.cpp  LogListModel.h  LogRecorder.cpp  LogRecorder.h  ModbusSettingsDialog.cpp  ModbusSettingsDialog.h  NetworkConnectionWidget.cpp  NetworkConnectionWidget.h  QuickCommandWidget.cpp  QuickCommandWidget.h  SerialConnectionWidget.cpp  SerialConnectionWidget.h  ServerClientPanel.cpp  ServerClientPanel.h  TcpClientConnectionWidget.cpp  TcpClientConnectionWidget.h  TcpConnectionWidget.cpp  TcpConnectionWidget.h  TcpServerConnectionWidget.cpp  TcpServerConnectionWidget.h  TrafficMonitorWidget.cpp  (+6 more)
updater/: CMakeLists.txt  IPlatformUpdateStrategy.h  UpdateTask.cpp  UpdateTask.h  main.cpp
updater/linux/: LinuxUpdateStrategy.h
updater/macos/: MacosUpdateStrategy.h
updater/windows/: Win32Encoding.h  Win32UpdateStrategy.cpp  Win32UpdateStrategy.h  main.cpp
(+162 files in other folders)
